# newsletter

./: .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  notes.txt  spec.yaml  sqlx-data.json
configuration/: base.yaml
migrations/: 20240326032109_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: health_check.rs
